# 2-simplex

./: .gitattributes  .gitignore  README.md  check_tokenizer.py  pyproject.toml
2-simplex/: README.md  requirements.txt
data/: finetune_clean.parquet  finetune_raw_balanced.parquet
docs/: newclid_syntax_analysis.md
imo_ag_30/: bpsa.txt  translated_imo_2000_p1.txt  translated_imo_2000_p6.txt  translated_imo_2002_p2a.txt  translated_imo_2002_p2b.txt  translated_imo_2003_p4.txt  translated_imo_2004_p1.txt  translated_imo_2004_p5.txt  translated_imo_2005_p5.txt  translated_imo_2007_p4.txt  translated_imo_2008_p1a.txt  translated_imo_2008_p1b.txt  translated_imo_2008_p6.txt  translated_imo_2009_p2.txt  translated_imo_2010_p2.txt  translated_imo_2010_p4.txt  translated_imo_2011_p6.txt  translated_imo_2012_p1.txt  translated_imo_2012_p5.txt  translated_imo_2013_p4.txt  translated_imo_2014_p4.txt  translated_imo_2015_p3.txt  translated_imo_2015_p4.txt  translated_imo_2016_p1.txt  translated_imo_2017_p4.txt  translated_imo_2018_p1.txt  translated_imo_2019_p2.txt  translated_imo_2019_p2_easy.txt  translated_imo_2019_p6.txt  translated_imo_2020_p1.txt  translated_imo_2021_p3.txt  translated_imo_2022_p4.txt
imo_translated/: translated_imo_2000_p1.txt  translated_imo_2000_p6.txt  translated_imo_2002_p2a.txt  translated_imo_2002_p2b.txt  translated_imo_2003_p4.txt  translated_imo_2004_p1.txt  translated_imo_2004_p5.txt  translated_imo_2005_p5.txt  translated_imo_2007_p4.txt  translated_imo_2008_p1a.txt  translated_imo_2008_p1b.txt  translated_imo_2008_p6.txt  (+19 more)
tests/: conftest.py
(+66 files in other folders)
