[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2-simplex-geometry"
version = "0.1.0"
description = "2-Simplicial Attention for Geometric Proofs"
dependencies = [
    "torch",
    "transformers",
    "sentencepiece",
    "accelerate",
    "pandas",
    "pyarrow",
    "tqdm"
]
